--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,23 +1,31 @@
 <h2>Products</h2>
-<div *ngFor="let product of products">
-  <h3>
-    <a [title]="product.name + ' details'" [routerLink]="['/products', product.id]">
-      {{ product.name }}
-    </a>
-  </h3>
+<div *ngFor="let product of products; let i = index">
+  <div style="width: 100%; display:flex; border: 1px solid grey">
+    <h3>
+      <a [title]="product.name + ' details'" [routerLink]="['/products', product.id]">
+        {{ product.name }}
+      </a>
+      <span id="show" (click)="hideme[i] = !hideme[i]">
+        show
+      </span>
+    </h3>
+  </div>
 
-  <p *ngIf="product.description">
-    Description: {{ product.description }}
-  </p>
+  <div [hidden]="!hideme[i]">
+    <p *ngIf="product.description">
+      Description: {{ product.description }}
+    </p>
 
-  <button type="button" (click)="share()">
-    Share
-  </button>
+    <button type="button" (click)="share()">
+      Share
+    </button>
 
-  <app-product-alerts
-    [products]="product"
-    (notify)="onNotify()">
-  </app-product-alerts>
+    <app-product-alerts
+      [products]="product"
+      (notify)="onNotify()">
+    </app-product-alerts>
+  </div>
+
 </div>
 
 <!-- 
