--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,18 +1,28 @@
-h3{
+.tab {
   width: 100%;
-  /* background:lightgrey;  */
-  padding: 10px 0; 
-  display:flex;  
+  display: flex;
+  border-bottom: 1px solid grey;
+}
+
+.tab:last-child {
+  border-bottom: none;
+}
+
+h3 {
+  width: 100%;
+  background: lightgrey;
+  padding: 10px 0;
+  display: flex;
   justify-content: space-between;
 }
 
-#show{
-  font-size:16px; 
+#show {
+  font-size: 16px;
   font-weight: normal;
 }
 
-#show:hover{
-  color: red;
+#show:hover {
+  cursor: pointer;
 }
 
 /*
