--- a/src/app/product-alerts/product-alerts.component.html
+++ b/src/app/product-alerts/product-alerts.component.html
@@ -1,3 +1,3 @@
-<p *ngIf="products && products.price > 700">
+<p *ngIf="products && products.price > 700" id="notify">
   <button type="button" (click)="notify.emit()">Notify Me</button>
 </p>
