--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -5,6 +5,6 @@
   <span>{{ shipping.price | currency }}</span>
 </div> 
 
-<select type="number" [(ngModel)]="selectedLevel">
+<!-- <select type="number" [(ngModel)]="selectedLevel">
   <option *ngFor="let price of prices" [ngValue]="price">{{price.name}}</option>
-</select>
+</select> -->
