--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,12 @@
 <h3>Cart</h3>
 
-<p>
+<!-- <p>
   <a routerLink="/shipping">Shipping Prices</a>
-</p>
+</p> -->
+
+<select type="number" [(ngModel)]="selectedLevel">
+  <option *ngFor="let price of prices" [ngValue]="price">{{price.name}}</option>
+</select>
 
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }}</span>
