--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -3,8 +3,10 @@
 <div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
   <span>{{ shipping.type }}</span>
   <span>{{ shipping.price | currency }}</span>
-</div> 
+</div>
 
-<!-- <select type="number" [(ngModel)]="selectedLevel">
-  <option *ngFor="let price of prices" [ngValue]="price">{{price.name}}</option>
-</select> -->
+<select type="number" [(ngModel)]="selectedLevel">
+  <option *ngFor="let price of prices" [ngValue]="price">
+    {{ price.name }}
+  </option>
+</select>
