--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,14 +1,14 @@
 <h3>Cart</h3>
 
-<div>
+<div style="margin-bottom: 20px">
   <div *ngIf="(shipping | keyvalue)?.length; else elseBlock">
     Shipping: {{ shipping.name }} ({{ shipping.price | currency }})
   </div>
   <ng-template #elseBlock>Shipping: -</ng-template>
+  <p>
+    <a routerLink="/shipping">Shipping Prices</a>
+  </p>
 </div>
-<p>
-  <a routerLink="/shipping">Shipping Prices</a>
-</p>
 
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }}</span>
