--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,7 +5,9 @@
     Shipping: {{ shipping.name }} ({{ shipping.price | currency }})
   </div>
   <ng-template #elseBlock>Shipping: -</ng-template> -->
-  <div *ngIf="shipping != ''; else elseBlock">Shippings: {{ shipping }}</div>
+  <div *ngIf="(shipping | keyvalue)?.length; else elseBlock">
+    Shippings: {{ shipping }}
+  </div>
   <ng-template #elseBlock>Shipping: -</ng-template>
   <p>
     <a routerLink="/shipping">Shipping Prices</a>
